--- a/index.html
+++ b/index.html
@@ -66,19 +66,22 @@ body {
 
 
 <h6 align="center">LIVE COUNT</h6>
-<h3 align="center"><br>240</br></h3>
+<h3 align="center"><br>257</br></h3>
 
 
 <h6 align="center">SUBSCRIBERS</h6>
 
 <a href="https://www.youtube.com/channel/UC6ZgCl_f6YPxAsrzWhApPow" class="youtube"><img width="100" src="https://telegra.ph/file/eed0564c971099c177184.jpg" class="mx-auto d-block"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<h3 align="center"><br>8604</br></h3>
+<h3 align="center"><br>9360</br></h3>
 
 <h6 align="center">TOTAL VIEWS</h6>
-<h3 align="center"><br>21</br></h3>
+<h3 align="center"><br>25</br></h3>
 	
 <h6 align="center">TOTAL VIDEOS</h6>
+<h8 align="center">LATEST UPDATE ON</h8>
+<font color="red"><h8 align="center">2021/10/11</h8></font>
+<font color="red"><h8 align="center">01:12</h8></font>
 
 
 
