--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ body {
 <h3 align="center"><br>25</br></h3>
 	
 <h6 align="center">TOTAL VIDEOS</h6>
-<font color="red"><h7 align="center">2021/10/11</h7></font>
-<font color="red"><h6 align="center">01:12</h6></font>
+<h7 align="center"><font color="red">2021/10/11</font></h7>
+<h6 align="center"><font color="red">01:12</font></h6>
 
 <h8 align="center">LATEST UPDATE ON</h8>
 
