--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
 	
 <h6 align="center">TOTAL VIDEOS</h6>
 	
-<h8 align="center">LATEST UPDATE ON</h8>
+<h8 align="center">LATEST UPDATE ON :</h8>
 <h7 align="center"><font color="red">2021/10/11</font></h7>
 
 
