AUTO COUNT UPDATED

--- a/index.html
+++ b/index.html
@@ -66,22 +66,19 @@ body {
 
 
 <h6 align="center">LIVE COUNT</h6>
-<h3 align="center"><br>257</br></h3>
 
 
+<p>
+<h1 align="center"><a href="https://www.youtube.com/channel/UC6ZgCl_f6YPxAsrzWhApPow" class="youtube"><img width="200" src="https://img.shields.io/youtube/channel/subscribers/UC6ZgCl_f6YPxAsrzWhApPow?label=Subscribers&style=social" class="mx-auto d-block"></h1>
+</p>
 <h6 align="center">SUBSCRIBERS</h6>
-
-<a href="https://www.youtube.com/channel/UC6ZgCl_f6YPxAsrzWhApPow" class="youtube"><img width="100" src="https://telegra.ph/file/eed0564c971099c177184.jpg" class="mx-auto d-block"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<h3 align="center"><br>9360</br></h3>
+<h1 align="center"><a href="https://www.youtube.com/channel/UC6ZgCl_f6YPxAsrzWhApPow" class="youtube"><img width="200" src="https://img.shields.io/youtube/channel/views/UC6ZgCl_f6YPxAsrzWhApPow?label=Total Views&style=social" class="mx-auto d-block"></h1>
 
 <h6 align="center">TOTAL VIEWS</h6>
-<h3 align="center"><br>25</br></h3>
+<h1 align="center"><a href="https://www.youtube.com/channel/UC6ZgCl_f6YPxAsrzWhApPow" class="youtube"><img width="200" src="https://img.shields.io/youtube/views/ncZkqJlg4Dw?label=Latest Video Views&style=social" class="mx-auto d-block"></h1>
 	
-<h6 align="center">TOTAL VIDEOS</h6>
+<h6 align="center">LATEST VIDEO VIEWS</h6>
 	
-<h8 align="center">LATEST UPDATE ON :</h8>
-<h7 align="center"><font color="red">2021/10/11</font></h7>
 
 
 
@@ -122,7 +119,7 @@ body {
     <h5 align="center"><br>LATEST VIDEO</br></h5>
    
 <br><br>
-<iframe width="260" height="220" src="https://www.youtube.com/embed/0MpnzBh5u-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="260" height="220" src="https://www.youtube.com/embed/ncZkqJlg4Dw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="card-body">
 
   </div>
